# dioxus-notes

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 0001_create_memos.sql
backend/src/: main.rs  routes.rs
core/: Cargo.toml
core/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: main.rs
